# SynthChat-V1.0.0

./: .gitignore  CONTRIBUTING.md  PetWindow_backup.tsx  README.md  SECURITY.md  build-one-click.cmd  build-one-click.ps1  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  temp_match.txt  tick_logic.txt  tsconfig.json  vision_helpers.txt  vite.config.ts  vitest.config.ts
.multi-agent/: stage7-codex-focused-review-task.md
backend/: Cargo.toml  README.md
backend/src/: api.rs  browser.rs  code_execution.rs  config.rs  files.rs  lib.rs  main.rs  mcp.rs  mcp_remote.rs  memory.rs  operations.rs  plugins.rs  product_catalog.rs  profiles.rs  skills.rs  tools.rs  web.rs  wechat.rs
backend/src/api/: error.rs  file_routes.rs  import_routes.rs  mcp_routes.rs  memory_routes.rs  operation_routes.rs  plugin_routes.rs  product_routes.rs  profile_routes.rs  run_routes.rs  session_routes.rs  skill_routes.rs  tool_routes.rs  web_routes.rs  wechat_routes.rs  workspace_routes.rs
backend/src/compat/: hermes_v21.rs  mod.rs
backend/src/processes/: direct.rs  guardian.rs  manager.rs  mod.rs  output.rs  platform.rs  shell.rs
backend/src/providers/: mod.rs  openai_compatible.rs
backend/src/runs/: mod.rs  service.rs  task_registry.rs
backend/src/sessions/: cursor.rs  import.rs  mod.rs  process_store.rs  run_store.rs  schema.rs  store.rs  tests.rs  workspace_store.rs
backend/src/skills/: lifecycle.rs  runtime_config.rs
backend/src/tools/: clarify.rs  fuzzy.rs  runtime.rs  terminal.rs  v4a.rs  workspace.rs
backend/src/web/: runtime_config.rs
backend/tests/: code_execution_contract.rs  file_http.rs  hermes_import_http.rs  hermes_v21_compat.rs  hermes_v21_import.rs  http_contract.rs  mcp_http.rs  mcp_openapi.rs  memory_http.rs  plugins_standalone.rs  process_guardian.rs  process_lifecycle.rs  product_catalog_http.rs  run_http.rs  runtime_log_redaction.rs  skill_http.rs  skill_management_http.rs  toolset_http.rs  web_http.rs  web_run_http.rs  wechat_http.rs  windows_system_keychain.rs  workspace_http.rs
backend/tests/fixtures/: hermes_v21.sql
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json  pet-window.json
desktop/icons/: icon.icns
desktop/src/: backend.rs  lib.rs  main.rs  pet.rs  runtime_config.rs
docs/: api-contract.md  architecture.md  code-impact.md  development.md  linux-native-build.md  macos-native-build.md  migration-status.md  openapi.yaml  patch-compat-notes.md  performance-report.md  pet-asset-provenance.json  pet-asset-provenance.md  release.md  security-report.md  terminal-process-contract.md  test-report.md  update-manifest.example.json  upstream-lock.json  windows-native-build.md  对话服务商配置指南_小白版.docx
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
git_shell/: README.md  clear-commit.ps1  clear-remote-branch.ps1  clear-remote-repo.ps1  clear-tag.ps1  create-github-repo.ps1  git-config-helper.ps1  git-quick-status.ps1  git-remote-helper.ps1  git-script-profile.ps1  init-git-env.ps1  pull-github.ps1  push-github.ps1  set-git-account.ps1  set-git-remote.ps1
git_shell_linux/: clear-commit.sh  clear-remote-branch.sh  clear-remote-repo.sh  clear-tag.sh  create-github-repo.sh  init-git-env.sh  (+4 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  temp_word.docx  windows-test-manifest.rc
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/docs/: a2a-group-chat-integration-plan.md  hermes-agent-capability-audit.md
src-tauri/src/: agent.rs  error.rs  hermes_auth.rs  lib.rs  llm.rs  main.rs  mcp.rs  model_catalog.rs  models.rs  plugins.rs  process_utils.rs  skills.rs  store.rs  threat_patterns.rs  wechat_settings.rs
src-tauri/src/agent/: acp_auth.rs  acp_child_events.rs  acp_client.rs  acp_client_fs.rs  acp_commands.rs  acp_edit_approval.rs  acp_events.rs  acp_history.rs  acp_permissions.rs  acp_prompt.rs  acp_prompt_runtime.rs  acp_queue.rs  acp_server.rs  acp_session.rs  acp_session_env.rs  acp_subprocess.rs  acp_tool_output.rs  agent_loop.rs  approval_gateway.rs  auxiliary_tasks.rs  browser_plugins.rs  browser_tools.rs  command_guard.rs  communication.rs  computer_use.rs  context_compression.rs  context_engine.rs  context_references.rs  control_commands.rs  cron.rs  dashboard_auth.rs  dashboard_plugins.rs  decision_parser.rs  delegation.rs  delegation_acp.rs  delegation_artifacts.rs  delegation_request.rs  delegation_run_state.rs  delegation_scope.rs  delegation_synthchat.rs  (+39 more)
src-tauri/src/llm/: anthropic_transport.rs  bedrock_transport.rs  gemini_transport.rs  openai_transport.rs  responses_transport.rs  tool_schemas.rs
(+597 files in other folders)
