[package]
name = "synthchat-hermes-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
cap-fs-ext = "=4.0.2"
cap-std = "=4.0.2"
dirs = "6"
fs2 = "0.4.3"
futures-util = "0.3"
hmac = "0.12"
globset = "0.4"
keyring-core = "=1.0.0"
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1"
secrecy = { version = "=0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10.0"
sha2 = "0.10"
subtle = "2.6"
tempfile = "3.27"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml_edit = "=0.25.13"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["connect"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
zeroize = "=1.9.0"
zip = { version = "4", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "=1.1.0", default-features = false }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "=1.0.1", default-features = false, features = ["keychain"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
zbus-secret-service-keyring-store = { version = "=1.0.0", default-features = false, features = ["crypto-rust"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
