[package]
name = "synthchat-desktop"
version = "1.1.0"
description = "Minimal SynthChat Tauri desktop shell"
edition = "2024"
rust-version = "1.88"
publish = false

[lib]
name = "synthchat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "synthchat-desktop"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
zeroize = "1"
