[package]
name = "synthchat-v1"
version = "1.1.0"
description = "SynthChat V1.1.0 Desktop Application"
authors = ["pro_sunner"]
edition = "2021"

[lib]
name = "synthchat_v1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "synthchat-v1"
path = "src/main.rs"
test = false

[build-dependencies]
embed-resource = "3.0"
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "stream", "system-proxy"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
futures = "0.3"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
base64 = "0.22"
aes = "0.8"
aes-gcm = "0.10"
ctr = "0.9"
cbc = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
rand = "0.9"
hex = "0.4"
hmac = "0.12"
md-5 = "0.10"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
lettre = "0.11"
imap = "2.4"
native-tls = "0.2"
tokio-native-tls = "0.3"
mailparse = "0.15"
rsa = { version = "0.9", features = ["pem"] }
dirs = "6"
xcap = "0.9.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Globalization", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
